--- a/src/screens/AnnotationScreen/main.html
+++ b/src/screens/AnnotationScreen/main.html
@@ -13,15 +13,16 @@
 	</head>
 	<!-- <body class="bg-gray-100 min-h-screen items-center justify-center flex antialiased text-gray-900"> -->
 		<div class="flex h-screen w-screen bg-gray-200 flex-col">
-			<div class="bg-red-400 h-32 w-full">
-	
+			
+			<div class="bg-red-400 h-20 w-full flex flex-col">
+				<div class="bg-green-500 w-72 h-full p-2 mx-auto">
+					<div class="bg-blue-400 p-1 h-full rounded-lg"></div>
+				</div>
 			</div>
 			
-			<!-- 
-			<div class="bg-green-400 h-full w-16"> 
-
-			</div> -->
-			
+			<div class='flex w-full h-20 absolute flex-col justify-end pb-3 align-middle'>
+				<div class='bg-blue-200 h-12 w-64 mx-auto'></div>
+			</div>
 			<div class='flex flex-row h-full'> 
 				<div class='flex-shrink-0 w-72'>
 					<div class='h-full flex flex-col overflow-scroll p-3 '>
