Finally fixed navbar and deleted a bunch of other components.

--- a/src/screens/AnnotationScreen/main.html
+++ b/src/screens/AnnotationScreen/main.html
@@ -12,9 +12,9 @@
 		<link rel="stylesheet" href="../../styles/main.css">
 	</head>
 	<!-- <body class="bg-gray-100 min-h-screen items-center justify-center flex antialiased text-gray-900"> -->
-		<div class="flex h-screen w-screen bg-gray-200 flex-col">
+		<div class="h-screen flex-col flex bg-gray-200 ">
 			
-			<div class="bg-red-400 h-20 w-full flex flex-col">
+			<div class="flex-shrink-0 bg-red-400 h-20 w-full flex flex-col">
 				<div class="bg-green-500 w-72 h-full p-2 mx-auto">
 					<div class="bg-blue-400 p-1 h-full rounded-lg"></div>
 				</div>
@@ -23,9 +23,9 @@
 			<div class='flex w-full h-20 absolute flex-col justify-end pb-3 align-middle'>
 				<div class='bg-blue-200 h-12 w-64 mx-auto'></div>
 			</div>
-			<div class='flex flex-row h-full'> 
-				<div class='flex-shrink-0 w-72'>
-					<div class='h-full flex flex-col overflow-scroll p-3 '>
+			<div class='flex flex-row flex-auto bg-gray-200'> 
+				<div class='flex-shrink-0 w-72 h-screen'>
+					<div class='flex flex-col overflow-scroll p-3 h-full'>
 						<div class="grid grid-cols-2 gap-3 pb-2">	 
 							<div class='h-56 flex hover:shadow-outline'>
 								<div class='h-full w-full object-contain flex relative'>	
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 				</div>
-				<div class='h-full w-1 bg-gray-400'></div>
+				<div class='h-full w-2 bg-gray-500'></div>
 				<div class='h-full flex-auto'>
 					<div class='flex flex-row max-h-full'>
 						<div class='hidden flex-shrink-0 bg-gray-100 rounded-full shadow-lg h-64 ml-3 mt-3 w-16'> </div>
