Move post browsing navbar to bottom.

--- a/src/screens/AnnotationScreen/main.html
+++ b/src/screens/AnnotationScreen/main.html
@@ -23,41 +23,41 @@
 			<div class='flex w-full h-20 absolute flex-col justify-end pb-3 align-middle'>
 				<div class='bg-blue-200 h-12 w-64 mx-auto'></div>
 			</div>
-			<div class='flex flex-row flex-auto bg-gray-200'> 
-				<div class='flex-shrink-0 w-72 h-screen'>
-					<div class='flex flex-col overflow-scroll p-3 h-full'>
-						<div class="grid grid-cols-2 gap-3 pb-2">	 
-							<div class='h-56 flex hover:shadow-outline'>
-								<div class='h-full w-full object-contain flex relative'>	
-									<div class='h-full w-full mx-auto' style="width: 77.7%">
-										<img class='h-full w-full mx-auto object-contain' src='../../../public/newsScreenshot.png'></img>
-									</div>
-									<div class='h-full w-full absolute '>
-										<img class="h-full w-full object-contain" src='../../../public/iPhoneXWireframe.png'></img>
-									</div>
+			<div class='flex flex-row flex-auto bg-gray-200 relative'> 
+				<div class='bg-red-400 w-screen hover:bg-green-900 hover:h-72 bottom-0 z-10 absolute p-3'>
+					<div class='hidden bg-green-200 flex w-full h-full flex-row overflow-scroll'>
+						<div class='h-56 flex hover:shadow-outline bg-blue-800 max-w-xs p-2 ml-2 my-auto' style="max-width: 150px; min-width: 150px">
+							<div class='h-full w-full object-contain flex relative'>	
+								<div class='h-full w-full mx-auto' style="width: 77.7%">
+									<img class='h-full w-full mx-auto object-contain' src='../../../public/newsScreenshot.png'></img>
+								</div>
+								<div class='h-full w-full absolute '>
+									<img class="h-full w-full object-contain" src='../../../public/iPhoneXWireframe.png'></img>
 								</div>
 							</div>
-							<div class='h-56 flex'>
-								<img class="object-contain" src='../../../public/iPhoneXWireframe.png'></img>
+						</div>
+						<div class='h-56 flex hover:shadow-outline bg-blue-800 max-w-xs p-2 ml-2 my-auto' style="max-width: 150px; min-width: 150px">
+							<div class='h-full w-full object-contain flex relative'>	
+								<div class='h-full w-full mx-auto' style="width: 77.7%">
+									<img class='h-full w-full mx-auto object-contain' src='../../../public/newsScreenshot.png'></img>
+								</div>
+								<div class='h-full w-full absolute '>
+									<img class="h-full w-full object-contain" src='../../../public/iPhoneXWireframe.png'></img>
+								</div>
 							</div>
 						</div>
-						<div class="grid grid-cols-2 gap-3 pb-2">	 
-							<div class='h-56 flex'>
-								<img class="object-contain" src='../../../public/iPhoneXWireframe.png'></img>
-							</div>
-							<div class='h-56 flex'>
-								<img class="object-contain" src='../../../public/iPhoneXWireframe.png'></img>
-							</div>
-						</div>
-						<div class="grid grid-cols-2 gap-3 pb-2">	 
-							<div class='h-56 flex'>
-								<img class="object-contain" src='../../../public/iPhoneXWireframe.png'></img>
-							</div>
-							<div class='h-56 flex'>
-								<img class="object-contain" src='../../../public/iPhoneXWireframe.png'></img>
+						<div class='h-56 flex hover:shadow-outline bg-blue-800 max-w-xs p-2 ml-2 my-auto' style="max-width: 150px; min-width: 150px">
+							<div class='h-full w-full object-contain flex relative'>	
+								<div class='h-full w-full mx-auto' style="width: 77.7%">
+									<img class='h-full w-full mx-auto object-contain' src='../../../public/newsScreenshot.png'></img>
+								</div>
+								<div class='h-full w-full absolute '>
+									<img class="h-full w-full object-contain" src='../../../public/iPhoneXWireframe.png'></img>
+								</div>
 							</div>
 						</div>
 					</div>
+							
 				</div>
 				<div class='h-full w-2 bg-gray-500'></div>
 				<div class='h-full flex-auto'>
