Adjusted layout in react.

--- a/src/screens/AnnotationScreen/PostView/layout.html
+++ b/src/screens/AnnotationScreen/PostView/layout.html
@@ -20,7 +20,7 @@
 		
 		<script src="" async defer></script>
 		<div class='h-screen w-screen flex flex-row'>			
-			<div class='shadow-lg bg-white w-4/12 pt-1 h-screen overflow-scroll my-auto flex flex-col'>
+			<div class='shadow-lg bg-white w-4/12 h-screen overflow-scroll my-auto flex flex-col'>
 			
 				<div id='menu' class='flex-shrink-0 flex flex-col pb-5 '>
 					<div class="flex-shrink-0 flex border-b border-gray-200 px-4 py-2 hover:bg-gray-200 cursor-pointer">
@@ -132,7 +132,7 @@
 						</div>
 					</div>
 				</div>
-				<div class='flex-auto relative overflow-scroll'>
+				<div class='flex-auto relative overflow-hidden'>
 					<div class="z-30 w-full absolute bottom-0 ">
 						<div class="rounded-md bg-yellow-100 shadow-xl p-4 mx-4 my-1">
 							<div class="flex">
