--- a/src/screens/AnnotationScreen/PostNavigator/index.html
+++ b/src/screens/AnnotationScreen/PostNavigator/index.html
@@ -19,7 +19,7 @@
 		<![endif]-->
 		<div class='bg-gray-300 font-body w-screen h-screen bg-white flex justify-center'>
 			
-			<div class='shadow-lg bg-white w-4/12 pt-1 h-screen overflow-scroll my-auto flex flex-col'>
+			<div class='shadow-lg bg-white w-4/12 h-screen overflow-scroll my-auto flex flex-col'>
 				
 				<div id='menu' class='flex-shrink-0 flex flex-col pb-5 '>
 					<div class="flex-shrink-0 flex border-b border-gray-200 px-4 py-2 ">
@@ -30,7 +30,7 @@
 							</div>
 							<div class="ml-2 ">
 							  <p class="text-sm leading-3 pt-2 font-medium text-gray-700 group-hover:text-gray-900">
-								App.ly
+								App.ly;
 							  </p>
 							  <p class="text-xs leading-5 font-medium text-gray-500 group-hover:text-gray-700 group-focus:underline transition ease-in-out duration-150">
 								V 0.1.1beta
