--- a/src/screens/AnnotationScreen/PostView/layout.html
+++ b/src/screens/AnnotationScreen/PostView/layout.html
@@ -112,7 +112,7 @@
 
 			</div>
 
-			<div class='flex flex-col'>
+			<div class='flex flex-col w-full'>
 				<div class="bg-whiteflex flex-col">
 					<div class="mx-auto w-full flex justify-center h-10 relative">
 						<div class='h-full w-full absolute flex'>
