--- a/src/screens/AnnotationScreen/PostView/layout.html
+++ b/src/screens/AnnotationScreen/PostView/layout.html
@@ -112,29 +112,40 @@
 
 			</div>
 
-			<div class='flex flex-col w-full'>
-				<div class="bg-whiteflex flex-col">
-					<div class="mx-auto w-full flex justify-center h-10 relative">
-						<div class='h-full w-full absolute flex'>
-							<div class="flex flex-auto right-0 my-auto z-0 overflow-hidden justify-end pr-2">
-	
-								<img class="relative z-30 inline-block h-8 w-8 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1491528323818-fdd1faba62cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" />
-								<img class="relative z-20 -ml-2 inline-block h-8 w-8 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" />
-								<img class="relative z-10 -ml-2 inline-block h-8 w-8 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2.25&w=256&h=256&q=80" alt="" />
-								<img class="relative mr-0 z-0 -ml-2 inline-block h-8 w-8 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" />
-								<div class="bg-blue-500 rounded-full w-10 -ml-1 flex h-6=8 text-sm font-semibold items-center justify-center text-gray-300" style="font-size: 13px"> 
-									+15
+			<div class='flex flex-col w-full '> 
+				
+
+				<div class='flex-auto relative '>
+					<div class="z-30 w-full absolute px-2 pt-2 sticky">
+						<div class=' w-full bg-white shadow-md rounded-full flex flex-col'> 
+							<div class="mx-auto w-full flex justify-center h-10 relative">
+								<div class='h-full w-full absolute flex'>
+									<div class="flex flex-auto right-0 my-auto z-0 overflow-hidden justify-end pr-2">
+			
+										<img class="relative z-30 inline-block h-8 w-8 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1491528323818-fdd1faba62cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" />
+										<img class="relative z-20 -ml-2 inline-block h-8 w-8 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" />
+										<img class="relative z-10 -ml-2 inline-block h-8 w-8 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2.25&w=256&h=256&q=80" alt="" />
+										<img class="relative mr-0 z-0 -ml-2 inline-block h-8 w-8 rounded-full text-white shadow-solid" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" />
+										<div class="bg-blue-500 rounded-full w-10 -ml-1 flex h-6=8 text-sm font-semibold items-center justify-center text-gray-300" style="font-size: 13px"> 
+											+15
+										</div>
+									</div>
+								</div>
+								<div class=" flex my-auto uppercase font-semibold text-xs text-gray-700 flex flex-row">
+									Release progress
+									<div class='ml-4 w-96 h-2 my-auto'>
+										<div class='h-2 w-full  bg-green-600 rounded-full'></div>
+									</div>
+									
 								</div>
 							</div>
 						</div>
-						<div class="flex my-auto">
-							Release progress
-						</div>
+
 					</div>
 				</div>
 				<div class='flex-auto relative overflow-hidden'>
 					<div class="z-30 w-full absolute bottom-0 ">
-						<div class="rounded-md bg-yellow-100 shadow-xl p-4 mx-4 my-1">
+						<div class="rounded-md bg-yellow-100 shadow-xl p-4 mx-2 my-2">
 							<div class="flex">
 								<div class="flex-shrink-0">
 									<svg class="h-5 w-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
@@ -166,7 +177,7 @@
 					</div>
 	
 					<div class='overflow-scroll flex-auto h-full flex flex-col relative'> 
-						<div class="bg-gray-100 p-3 py-3 shadow-inner">
+						<div class="bg-gray-100 px-3 py-1 ">
 							<h2 class='text-base font-bold'>The text doees not render properly</h2>
 							<div class='-mt-1 text-xs uppercase text-gray-500 font-semibold '>
 								2/20/20
