--- a/src/screens/AnnotationScreen/PostView/layout.html
+++ b/src/screens/AnnotationScreen/PostView/layout.html
@@ -143,7 +143,7 @@
 
 					</div>
 				</div>
-				<div class='w-full overflow-scroll'>
+				<div class='bg-red-200 w-full overflow-scroll'>
 					<!-- <div class="z-30 w-full absolute bottom-0 ">
 						<div class="rounded-md bg-yellow-100 shadow-xl p-4 mx-2 my-2">
 							<div class="flex">
@@ -176,7 +176,7 @@
 						</div>
 					</div> -->
 	
-					<div class='bg-gray-100 flex-auto flex flex-col relative h-full'> 
+					<div class='flex-auto flex flex-col relative h-full'> 
 						<div class="bg-gray-100 mx-3 py-1 ">
 							<h2 class='text-base font-bold'>The text doees not render properly</h2>
 							<div class='-mt-1 text-xs uppercase text-gray-500 font-semibold '>
