Finalized the form before implementing in react.

--- a/src/screens/AnnotationScreen/PostView/layout.html
+++ b/src/screens/AnnotationScreen/PostView/layout.html
@@ -268,7 +268,7 @@
 							
 							
 							<div class='flex-auto ml-3 rounded-md ' > 
-								<div class='flex-shrink-0'>
+								<div class='flex-shrink-0 bg-blue-100'>
 									<div class='flex w-full h-8 '>
 										<div class=' pb-1 mx-auto flex flex-row p-0.5'>
 											<span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800">
