--- a/src/screens/AnnotationScreen/PostNavigator/index.html
+++ b/src/screens/AnnotationScreen/PostNavigator/index.html
@@ -109,7 +109,7 @@
 
 				<div id='createNew' class='bottom-0 flex flex-col flex-shrink-0 h-12 text-gray-700 border-t hover:bg-gray-200 hover:text-blue-800'>
 					
-					<div class="flex flex-row h-full pl-3 pr-3 mx-2 font-medium cursor-pointer">
+					<div class="flex flex-row h-full pl-3 pr-3 mx-2 font-medium rounded-md shadow-sm cursor-pointer">
 						<div class='my-auto'>
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 mr-1 icon-add"><path class="primary" fill-rule="evenodd" d="M17 11a1 1 0 0 1 0 2h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 0 1 2 0v4h4z"/></svg>
 						</div>
